week3/deploy/https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: postgres-demo
spec:
  redirectScheme:
    scheme: https
    permanent: true
