week3/deploy/ske.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud3-api
  namespace: postgres-demo
  labels:
    app: cloud3-api
spec:
  replicas: 1

  selector:
    matchLabels:
      app: cloud3-api

  template:
    metadata:
      labels:
        app: cloud3-api

    spec:
      serviceAccountName: cloud3-api

      imagePullSecrets:
        - name: stackit-registry

      containers:
        - name: cloud3-api
          image: registry.onstackit.cloud/level3_julie/cloud3-api:e61bee26176434cee33ca63894a92d9bb2ad7e69
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8080 # Go server listening to 8080

          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 2

          # check alive
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi


          # permissions
          securityContext:
            runAsNonRoot: true
            runAsUser: 65532
            runAsGroup: 65532
            allowPrivilegeEscalation: false # no upgrade
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

---
apiVersion: v1
kind: Service
metadata:
  name: cloud3-api
  namespace: postgres-demo
spec:
  type: ClusterIP

  selector:
    app: cloud3-api

  # Service:80 → Pod:8080
  ports:
    - name: http
      port: 80
      targetPort: http
