week3/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud3-api
  namespace: postgres-demo
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - julie-paas.runs.onstackit.cloud
      secretName: julie-paas-tls

  rules:
    - host: julie-paas.runs.onstackit.cloud
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: cloud3-api
                port:
                  number: 80
